compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__type_params__custom_type_tuple_type_params_count_twice.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
assertion_line: 102
expression: "\n        pub record Wibble<a, b> {\n            Wibble(a, b)\n        }\n\n        pub fn wibble() -> #(a, Wibble(a, b)) {\n            todo\n        }\n        "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([wibble/0]).
-export_type([wibble/2]).

-type wibble(I, J) :: {wibble, I, J}.

-file("/root/project/test/my/mod.rakun", 6).
-spec wibble() -> {K, wibble(K, any())}.
wibble() ->
    erlang:error(#{rakun_error => todo,
            message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"wibble"/utf8>>,
            line => 7}).
