compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__type_params__result_type_count_once.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
assertion_line: 24
expression: "\n        pub fn wibble() -> Result<a, a> {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub fn wibble() -> Result<a, a> {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([wibble/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec wibble() -> {ok, any()} | {error, any()}.
wibble() ->
    erlang:error(#{rakun_error => todo,
            message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"wibble"/utf8>>,
            line => 3}).
